# FPSE_Wordle

./: .gitignore  Design.md  README.md  STYLE_COMPLIANCE.md  TEST_SUMMARY.md  bisect302389518.coverage  bisect391335004.coverage  bisect672293493.coverage  bisect971606806.coverage  bisect97579974.coverage  bisect999420794.coverage  create_dicts.py  dune-project  example_run.txt  run_feedback_tests.sh  run_guess_tests.sh  test_guess_debug.ml  test_results.txt  wordle.opam
_coverage/: index.html
_coverage/src/lib/: dict.ml.html  feedback.ml.html  game.ml.html  game_loop.ml.html  guess.ml.html  hints.ml.html  solver.ml.html  ui.ml.html  utils.ml.html  wordle_functor.ml.html
data/: README.md  answers.txt  words.txt
data/10letter/: answers.txt  words.txt
data/2letter/: words.txt
data/3letter/: words.txt
data/4letter/: answers.txt
data/5letter/: answers.txt  words.txt
data/6letter/: answers.txt  words.txt
data/7letter/: answers.txt  words.txt
data/8letter/: answers.txt
data/9letter/: answers.txt
demo/dream/: dune-project  main.ml
mockUI/: index.html  script.js  styles.css
src-test/: FEEDBACK_TESTS_README.md  config_tests.ml  dict_tests.ml  dune  feedback_test.ml  feedback_test.mli  feedback_tests.ml  game_tests.ml  guess_test.ml  guess_test.mli  hints_tests.ml  integration_tests.ml  solver_tests.ml  ui_tests.ml  utils_tests.ml  wordle_functor_tests.ml
src/lib/: config.mli  dict.ml  dict.mli  dune  feedback.ml  feedback.mli  game.ml  game.mli  game_loop.ml  game_loop.mli  guess.ml  guess.mli  hints.ml  hints.mli  solver.ml  solver.mli  ui.ml  ui.mli  utils.ml  utils.mli  wordle.ml  wordle.mli  wordle_functor.ml  wordle_functor.mli
ui/: README.md  dune  run.sh  setup.sh  wordle_web.ml
ui/static/: app.js  styles.css
