(test
  (name wordle_tests)
  (modules wordle_tests)
  (libraries
    core
    ounit2
    lib
    base_quickcheck
  )
  (deps (file ../src/bin/wordle.exe) (glob_files_rec ../test/**))
  (preprocess (pps ppx_jane)))

(test
  (name dict_tests)
  (modules dict_tests)
  (libraries
    core
    core_unix
    ounit2
    lib
  )
  (deps (glob_files_rec ../data/**))
  (preprocess (pps ppx_jane)))

(test
  (name guess_test)
  (modules guess_test)
  (libraries
    core
    ounit2
    lib
  )
  (preprocess (pps ppx_jane)))
