(test
  (name wordle_tests)
  (modules wordle_tests)
  (libraries
    core
    ounit2
    lib
    base_quickcheck
  )
  (deps (file ../src/bin/wordle.exe) (glob_files_rec ../test/**))
  (preprocess (pps ppx_jane)))

(test
  (name dict_tests)
  (modules dict_tests)
  (libraries
    core
    core_unix
    ounit2
    lib
  )
  (deps (glob_files_rec ../data/**))
  (action (chdir %{workspace_root} (run %{test})))
  (preprocess (pps ppx_jane)))

(test
  (name guess_test)
  (modules guess_test)
  (libraries
    core
    ounit2
    lib
  )
  (preprocess (pps ppx_jane)))

(test
  (name game_tests)
  (modules game_tests)
  (libraries
    core
    ounit2
    lib
  )
  (preprocess (pps ppx_jane)))

(test
  (name utils_tests)
  (modules utils_tests)
  (libraries
    core
    ounit2
    lib
  )
  (preprocess (pps ppx_jane)))

(test
  (name solver_tests)
  (modules solver_tests)
  (libraries
    core
    ounit2
    lib
  )
  (preprocess (pps ppx_jane)))

(test
  (name wordle_functor_tests)
  (modules wordle_functor_tests)
  (libraries
    core
    ounit2
    lib
  )
  (deps (glob_files_rec ../data/**))
  (action (chdir %{workspace_root} (run %{test})))
  (preprocess (pps ppx_jane)))

(test
  (name feedback_tests)
  (modules feedback_tests)
  (libraries
    core
    ounit2
    lib
  )
  (preprocess (pps ppx_jane)))

(test
  (name integration_tests)
  (modules integration_tests)
  (libraries
    core
    ounit2
    lib
  )
  (deps (glob_files_rec ../data/**))
  (action (chdir %{workspace_root} (run %{test})))
  (preprocess (pps ppx_jane)))

(test
  (name config_tests)
  (modules config_tests)
  (libraries
    core
    ounit2
    lib
  )
  (deps (glob_files_rec ../data/**))
  (action (chdir %{workspace_root} (run %{test})))
  (preprocess (pps ppx_jane)))

(test
  (name hints_tests)
  (modules hints_tests)
  (libraries
    core
    ounit2
    lib
  )
  (preprocess (pps ppx_jane)))

(test
  (name ui_tests)
  (modules ui_tests)
  (libraries
    core
    ounit2
    lib
  )
  (preprocess (pps ppx_jane)))
